kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service

  
spec:
  selector:
    app: vproapp
  
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
