kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01

  
spec:
  selector:
    app: vprormq
  
  type: ClusterIP
  ports:
  - port: 5672
    targetPort: vprormq-port
    protocol: TCP
